# journal-assistant

./: .gitignore  README.md  journal_assistant.db  package-lock.json  package.json
.agents/plugins/: marketplace.json
backend/: .env  .env.example  create_tables.py  pyproject.toml  seed_data.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: documents.py  entries.py  health.py  jobs.py  me.py  work_days.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/models/: __init__.py  dtos.py
backend/app/services/: demo_store.py
backend/journal_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/supabase/migrations/: 20260414_000001_initial_auth_daily_log.sql
backend/tests/: test_api.py  test_security.py
frontend/: .env.example  components.json  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/evaluation-prep/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/report/: page.tsx
frontend/src/app/weekly/: page.tsx
frontend/src/shared/lib/: backend-client.ts  backend-types.ts  fetch-json.ts  routes.ts
plugins/journal-assistant-workflows/: context.md
plugins/journal-assistant-workflows/.codex-plugin/: plugin.json
plugins/journal-assistant-workflows/skills/journal-assistant-backend-api/: SKILL.md
(+50 files in other folders)
