[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Journal Assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]>=0.116.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pyjwt[crypto]>=2.10.1,<3.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
]

[tool.fastapi]
entrypoint = "main:app"
